--- a/app_myFrontendNuxtVue_01/package.json
+++ b/app_myFrontendNuxtVue_01/package.json
@@ -13,5 +13,11 @@
     "nuxt": "^4.1.2",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@mdi/font": "^7.4.47",
+    "sass": "^1.93.2",
+    "vite-plugin-vuetify": "^2.1.2",
+    "vuetify": "^3.10.3"
   }
 }
